config index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <script>
     // similar behavior as an HTTP redirect
-    window.location.replace("template/classic/dashboard-one.html");
+      window.location.replace("page-signin.html");
     </script>
   </body>
 </html>
