--- a/page-signin.html
+++ b/page-signin.html
@@ -123,7 +123,7 @@
         <div class="media align-items-stretch justify-content-center ht-100p pos-relative">
           <div class="media-body align-items-center d-none d-lg-flex">
             <div class="mx-wd-600">
-              <img src="https://via.placeholder.com/1260x950" class="img-fluid" alt="">
+              <img src="../../assets/img/FISI.jpg" class="img-fluid" alt="">
             </div>
             <div class="pos-absolute b-0 l-0 tx-12 tx-center">
               Workspace design vector is created by <a href="https://www.freepik.com/pikisuperstar" target="_blank">pikisuperstar (freepik.com)</a>
