--- a/page-signin.html
+++ b/page-signin.html
@@ -98,7 +98,7 @@
                   </div>
                   <input type="password" class="form-control" placeholder="Ingrese su contraseña">
                 </div>
-                <button class="btn btn-brand-02 btn-block">Ingresar</button>
+                <button class="btn btn-brand-02 btn-block" id="login">Ingresar</button>
               </div>
             </div><!-- sign-wrapper -->
           </div>
@@ -125,6 +125,9 @@
     <script src="../../lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
     <script src="../../assets/js/dashforge.js"></script>
+
+    <!-- functions -->
+    <script src="../../assets/js/login.js"></script>
 
     <!-- append theme customizer -->
     <script src="../../lib/js-cookie/js.cookie.js"></script>
