--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -726,6 +726,7 @@
     <!-- append theme customizer -->
     <script src="../../lib/js-cookie/js.cookie.js"></script>
     <script src="../../assets/js/dashforge.settings.js"></script>
+    <script src="../../assets/js/profile.js"></script>
 
     <script>
       $(function(){
