--- a/page-signin.html
+++ b/page-signin.html
@@ -89,14 +89,14 @@
   
                 <div class="form-group text-left">
                   <label>Username</label>
-                  <input type="text" class="form-control" placeholder="Aquí su username">
+                  <input type="text" class="form-control" placeholder="Aquí su username" name="username">
                 </div>
                 <div class="form-group">
                   <div class="d-flex justify-content-between mg-b-5">
                     <label class="mg-b-0-f">Contraseña</label>
                     <a href="" class="tx-13">¿Te has olvidado de tu contraseña?</a>
                   </div>
-                  <input type="password" class="form-control" placeholder="Ingrese su contraseña">
+                  <input type="password" class="form-control" placeholder="Ingrese su contraseña" name="password">
                 </div>
                 <button class="btn btn-brand-02 btn-block" id="login">Ingresar</button>
               </div>
