--- a/settings.html
+++ b/settings.html
@@ -2,16 +2,18 @@
   <a id="dfSettingsShow" href="" class="df-settings-link"><i data-feather="settings"></i></a>
   <div class="df-settings-body">
     <div class="pd-y-20">
-      <h3 class="tx-bold tx-spacing--2 tx-brand-02 mg-b-0">dash<span class="tx-normal tx-primary">forge</span></h3>
-      <span class="tx-sans tx-9 tx-uppercase tx-semibold tx-spacing-1 tx-color-03">Template Skin Customizer</span>
+      <h3 class="tx-bold tx-spacing--2 tx-brand-02 mg-b-0">
+        <img width="200px" src="../../assets/img/logo_fisi.png" alt="Logo Fisi">
+      </h3>
+      <span class="tx-sans tx-9 tx-uppercase tx-semibold tx-spacing-1 tx-color-03">Grupo 2 - IHC</span>
     </div>
 
     <div class="pd-y-20 bd-t">
-      <label class="tx-sans tx-10 tx-uppercase tx-bold tx-spacing-1 tx-color-02 mg-b-15">Skin Mode</label>
+      <label class="tx-sans tx-10 tx-uppercase tx-bold tx-spacing-1 tx-color-02 mg-b-15">Modo de Configuración</label>
       <div class="row row-xs">
         <div class="col-4">
           <a href="" class="df-mode df-mode-default active" data-title="classic"></a>
-          <span class="df-skin-name">Classic</span>
+          <span class="df-skin-name">Clásico</span>
         </div>
         <div class="col-4">
           <a href="" class="df-mode df-mode-light" data-title="light">
@@ -32,13 +34,12 @@
             <span class="bg-gray-700"></span>
             <span class="bg-gray-900"></span>
           </a>
-          <span class="df-skin-name tx-nowrap">Dark <span class="tx-normal">(Coming Soon)</span></span>
         </div>
       </div><!-- row -->
     </div>
 
     <div class="pd-y-20 bd-t">
-      <label class="tx-sans tx-10 tx-uppercase tx-bold tx-spacing-1 tx-color-02 mg-b-15">Navigation Skin</label>
+      <label class="tx-sans tx-10 tx-uppercase tx-bold tx-spacing-1 tx-color-02 mg-b-15">Navegador de Configuración</label>
       <div class="row row-xs">
         <div class="col-4">
           <a href="" class="df-skin df-skin-default active" data-title="default"></a>
@@ -67,19 +68,6 @@
         </div>
       </div><!-- row -->
     </div>
-
-    <div class="pd-y-20 bd-t">
-      <label class="tx-sans tx-10 tx-uppercase tx-bold tx-spacing-1 tx-color-02 mg-b-15">Navigation Layout</label>
-      <div class="row row-xs">
-        <div class="col">
-          <a href="../classic/dashboard-one.html" class="btn btn-xs btn-white btn-uppercase btn-block">Horizontal</a>
-        </div><!-- col -->
-        <div class="col">
-          <a href="../classic-plus/dashboard-one.html" class="btn btn-xs btn-white btn-uppercase btn-block">Vertical</a>
-        </div><!-- col -->
-      </div><!-- row -->
-    </div>
-
     <div class="pd-y-20 bd-t">
       <label class="tx-sans tx-10 tx-uppercase tx-bold tx-spacing-1 tx-color-02 mg-b-15">Font Family Base</label>
       <div class="row row-xs">
