--- a/page-signin.html
+++ b/page-signin.html
@@ -32,7 +32,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
-    <title>DashForge Responsive Bootstrap 4 Dashboard Template</title>
+    <title>Login - Aula Virtual</title>
 
     <!-- vendor css -->
     <link href="../../lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -47,74 +47,32 @@
     <header class="navbar navbar-header navbar-header-fixed">
       <a href="#" id="mainMenuOpen" class="burger-menu"><i data-feather="menu"></i></a>
       <div class="navbar-brand">
-        <a href="../../index.html" class="df-logo">dash<span>forge</span></a>
+        <a href="../../index.html" class="df-logo">
+          <img width="250px" src="../../assets/img/logo_fisi.png" alt="Logo Fisi">
+        </a>
       </div><!-- navbar-brand -->
       <div id="navbarMenu" class="navbar-menu-wrapper">
         <div class="navbar-menu-header">
-          <a href="../../index.html" class="df-logo">dash<span>forge</span></a>
+          <a href="../../index.html" class="df-logo">
+            <img width="250px" src="../../assets/img/logo_fisi.png" alt="Logo Fisi">
+          </a>
           <a id="mainMenuClose" href=""><i data-feather="x"></i></a>
         </div><!-- navbar-menu-header -->
         <ul class="nav navbar-menu">
-          <li class="nav-label pd-l-20 pd-lg-l-25 d-lg-none">Main Navigation</li>
+          <li class="nav-label pd-l-20 pd-lg-l-25 d-lg-none">Navegador Principal</li>
           <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="pie-chart"></i> Dashboard</a>
-            <ul class="navbar-menu-sub">
-              <li class="nav-sub-item"><a href="dashboard-one.html" class="nav-sub-link"><i data-feather="bar-chart-2"></i>Sales Monitoring</a></li>
-              <li class="nav-sub-item"><a href="dashboard-two.html" class="nav-sub-link"><i data-feather="bar-chart-2"></i>Website Analytics</a></li>
-              <li class="nav-sub-item"><a href="dashboard-three.html" class="nav-sub-link"><i data-feather="bar-chart-2"></i>Cryptocurrency</a></li>
-              <li class="nav-sub-item"><a href="dashboard-four.html" class="nav-sub-link"><i data-feather="bar-chart-2"></i>Helpdesk Management</a></li>
-            </ul>
+            <a href="" class="nav-link">Inicio</a>
           </li>
           <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="package"></i> Apps</a>
-            <ul class="navbar-menu-sub">
-              <li class="nav-sub-item"><a href="app-calendar.html" class="nav-sub-link"><i data-feather="calendar"></i>Calendar</a></li>
-              <li class="nav-sub-item"><a href="app-chat.html" class="nav-sub-link"><i data-feather="message-square"></i>Chat</a></li>
-              <li class="nav-sub-item"><a href="app-contacts.html" class="nav-sub-link"><i data-feather="users"></i>Contacts</a></li>
-              <li class="nav-sub-item"><a href="app-file-manager.html" class="nav-sub-link"><i data-feather="file-text"></i>File Manager</a></li>
-              <li class="nav-sub-item"><a href="app-mail.html" class="nav-sub-link"><i data-feather="mail"></i>Mail</a></li>
-            </ul>
+            <a href="" class="nav-link">Cursos</a>
           </li>
           <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="layers"></i> Pages</a>
-            <div class="navbar-menu-sub">
-              <div class="d-lg-flex">
-                <ul>
-                  <li class="nav-label">Authentication</li>
-                  <li class="nav-sub-item"><a href="page-signin.html" class="nav-sub-link"><i data-feather="log-in"></i> Sign In</a></li>
-                  <li class="nav-sub-item"><a href="page-signup.html" class="nav-sub-link"><i data-feather="user-plus"></i> Sign Up</a></li>
-                  <li class="nav-sub-item"><a href="page-verify.html" class="nav-sub-link"><i data-feather="user-check"></i> Verify Account</a></li>
-                  <li class="nav-sub-item"><a href="page-forgot.html" class="nav-sub-link"><i data-feather="shield-off"></i> Forgot Password</a></li>
-                  <li class="nav-label mg-t-20">User Pages</li>
-                  <li class="nav-sub-item"><a href="page-profile-view.html" class="nav-sub-link"><i data-feather="user"></i> View Profile</a></li>
-                  <li class="nav-sub-item"><a href="page-connections.html" class="nav-sub-link"><i data-feather="users"></i> Connections</a></li>
-                  <li class="nav-sub-item"><a href="page-groups.html" class="nav-sub-link"><i data-feather="users"></i> Groups</a></li>
-                  <li class="nav-sub-item"><a href="page-events.html" class="nav-sub-link"><i data-feather="calendar"></i> Events</a></li>
-                </ul>
-                <ul>
-                  <li class="nav-label">Error Pages</li>
-                  <li class="nav-sub-item"><a href="page-404.html" class="nav-sub-link"><i data-feather="file"></i> 404 Page Not Found</a></li>
-                  <li class="nav-sub-item"><a href="page-500.html" class="nav-sub-link"><i data-feather="file"></i> 500 Internal Server</a></li>
-                  <li class="nav-sub-item"><a href="page-503.html" class="nav-sub-link"><i data-feather="file"></i> 503 Service Unavailable</a></li>
-                  <li class="nav-sub-item"><a href="page-505.html" class="nav-sub-link"><i data-feather="file"></i> 505 Forbidden</a></li>
-                  <li class="nav-label mg-t-20">Other Pages</li>
-                  <li class="nav-sub-item"><a href="page-timeline.html" class="nav-sub-link"><i data-feather="file-text"></i> Timeline</a></li>
-                  <li class="nav-sub-item"><a href="page-pricing.html" class="nav-sub-link"><i data-feather="file-text"></i> Pricing</a></li>
-                  <li class="nav-sub-item"><a href="page-help-center.html" class="nav-sub-link"><i data-feather="file-text"></i> Help Center</a></li>
-                  <li class="nav-sub-item"><a href="page-invoice.html" class="nav-sub-link"><i data-feather="file-text"></i> Invoice</a></li>
-                </ul>
-              </div>
-            </div><!-- nav-sub -->
+            <a href="" class="nav-link">Profesores</a>
           </li>
-          <li class="nav-item"><a href="../../components/" class="nav-link"><i data-feather="box"></i> Components</a></li>
-          <li class="nav-item"><a href="../../collections/" class="nav-link"><i data-feather="archive"></i> Collections</a></li>
         </ul>
       </div><!-- navbar-menu-wrapper -->
       <div class="navbar-right">
-        <a href="http://dribbble.com/themepixels" class="btn btn-social"><i class="fab fa-dribbble"></i></a>
-        <a href="https://github.com/themepixels" class="btn btn-social"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/themepixels" class="btn btn-social"><i class="fab fa-twitter"></i></a>
-        <a href="https://themeforest.net/item/azia-responsive-bootstrap-4-dashboard-template/22983790" class="btn btn-buy"><i data-feather="shopping-bag"></i> <span>Buy Now</span></a>
+        <a href="#" class="btn btn-buy"><i data-feather="shopping-bag"></i> <span>Soporte</span></a>
       </div><!-- navbar-right -->
     </header><!-- navbar -->
 
@@ -125,14 +83,11 @@
             <div class="mx-wd-600">
               <img src="../../assets/img/FISI.jpg" class="img-fluid" alt="">
             </div>
-            <div class="pos-absolute b-0 l-0 tx-12 tx-center">
-              Workspace design vector is created by <a href="https://www.freepik.com/pikisuperstar" target="_blank">pikisuperstar (freepik.com)</a>
-            </div>
           </div><!-- media-body -->
           <div class="sign-wrapper mg-lg-l-50 mg-xl-l-60">
             <div class="wd-100p">
-              <h3 class="tx-color-01 mg-b-5">Sign In</h3>
-              <p class="tx-color-03 tx-16 mg-b-40">Welcome back! Please signin to continue.</p>
+              <h3 class="tx-color-01 mg-b-5">Login</h3>
+              <p class="tx-color-03 tx-16 mg-b-40">Bienvenido devuelta! Porfavor logueate para continuar.</p>
 
               <div class="form-group">
                 <label>Email address</label>
@@ -140,16 +95,12 @@
               </div>
               <div class="form-group">
                 <div class="d-flex justify-content-between mg-b-5">
-                  <label class="mg-b-0-f">Password</label>
-                  <a href="" class="tx-13">Forgot password?</a>
+                  <label class="mg-b-0-f">Contraseña</label>
+                  <a href="" class="tx-13">¿Te has olvidado de tu contraseña?</a>
                 </div>
                 <input type="password" class="form-control" placeholder="Enter your password">
               </div>
-              <button class="btn btn-brand-02 btn-block">Sign In</button>
-              <div class="divider-text">or</div>
-              <button class="btn btn-outline-facebook btn-block">Sign In With Facebook</button>
-              <button class="btn btn-outline-twitter btn-block">Sign In With Twitter</button>
-              <div class="tx-13 mg-t-20 tx-center">Don't have an account? <a href="page-signup.html">Create an Account</a></div>
+              <button class="btn btn-brand-02 btn-block">Ingresar</button>
             </div>
           </div><!-- sign-wrapper -->
         </div><!-- media -->
@@ -158,14 +109,12 @@
 
     <footer class="footer">
       <div>
-        <span>&copy; 2019 DashForge v1.0.0. </span>
-        <span>Created by <a href="http://themepixels.me">ThemePixels</a></span>
+        <span> Created byGrupo 2 - 2019 &copy;Copyright </span>
       </div>
       <div>
         <nav class="nav">
-          <a href="https://themeforest.net/licenses/standard" class="nav-link">Licenses</a>
-          <a href="../../change-log.html" class="nav-link">Change Log</a>
-          <a href="https://discordapp.com/invite/RYqkVuw" class="nav-link">Get Help</a>
+          <a href="#" class="nav-link">Curso IHC</a>
+          <a href="#" class="nav-link">8vo Ciclo</a>
         </nav>
       </div>
     </footer>
