--- a/page-signin.html
+++ b/page-signin.html
@@ -77,34 +77,34 @@
     </header><!-- navbar -->
 
     <div class="content content-fixed content-auth">
-      <div class="container">
-        <div class="media align-items-stretch justify-content-center ht-100p pos-relative">
-          <div class="media-body align-items-center d-none d-lg-flex">
-            <div class="mx-wd-600">
-              <img src="../../assets/img/FISI.jpg" class="img-fluid" alt="">
-            </div>
-          </div><!-- media-body -->
-          <div class="sign-wrapper mg-lg-l-50 mg-xl-l-60">
-            <div class="wd-100p">
-              <h3 class="tx-color-01 mg-b-5">Login</h3>
-              <p class="tx-color-03 tx-16 mg-b-40">Bienvenido devuelta! Porfavor logueate para continuar.</p>
-
-              <div class="form-group">
-                <label>Email address</label>
-                <input type="email" class="form-control" placeholder="yourname@yourmail.com">
-              </div>
-              <div class="form-group">
-                <div class="d-flex justify-content-between mg-b-5">
-                  <label class="mg-b-0-f">Contraseña</label>
-                  <a href="" class="tx-13">¿Te has olvidado de tu contraseña?</a>
+        <div class="row">
+          <div class="col-12 col-md-12 col-lg-8">
+            <img src="../../assets/img/FISI.jpg" class="img-fluid" alt="FISI">
+          </div>
+          <div class="col-12 col-md-12 col-lg-3 text-center">
+            <div class="sign-wrapper">
+              <div class="wd-100p">
+                <h3 class="tx-color-01 mg-b-5">Login</h3>
+                <p class="tx-color-03 tx-16 mg-b-40">Bienvenido devuelta! Porfavor logueate para continuar.</p>
+  
+                <div class="form-group text-left">
+                  <label>Username</label>
+                  <input type="text" class="form-control" placeholder="Aquí su username">
                 </div>
-                <input type="password" class="form-control" placeholder="Enter your password">
+                <div class="form-group">
+                  <div class="d-flex justify-content-between mg-b-5">
+                    <label class="mg-b-0-f">Contraseña</label>
+                    <a href="" class="tx-13">¿Te has olvidado de tu contraseña?</a>
+                  </div>
+                  <input type="password" class="form-control" placeholder="Ingrese su contraseña">
+                </div>
+                <button class="btn btn-brand-02 btn-block">Ingresar</button>
               </div>
-              <button class="btn btn-brand-02 btn-block">Ingresar</button>
-            </div>
-          </div><!-- sign-wrapper -->
-        </div><!-- media -->
-      </div><!-- container -->
+            </div><!-- sign-wrapper -->
+          </div>
+        </div>
+       
+      <!-- container -->
     </div><!-- content -->
 
     <footer class="footer">
