--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -245,6 +245,9 @@
     <!-- append theme customizer -->
     <script src="../../lib/js-cookie/js.cookie.js"></script>
     <script src="../../assets/js/dashforge.settings.js"></script>
+
+    <script src="../../assets/js/axios.min.js"></script>
+
     <script src="../../assets/js/profile.js"></script>
 
     <script>
