--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -81,7 +81,7 @@
     <div class="content content-fixed content-profile">
       <div class="container pd-x-0 pd-lg-x-10 pd-xl-x-0">
         <div class="media d-block d-lg-flex">
-          <div class="profile-sidebar col-12 col-sm-4 col-md-5 col-lg-4 np">
+          <div class="profile-sidebar col-12 col-sm-3 col-md-4 col-lg-3 np">
                 <div class="row">
                   <div class="col-sm-6 col-md-5 col-lg mg-t-40">
                     <div class="d-flex align-items-center justify-content-between mg-b-20">
@@ -186,33 +186,21 @@
           <div class="profile-sidebar pd-lg-r-25">
               <div class="row">
                 <div class="col-sm-3 col-md-2 col-lg-12">
-                  <div class="avatar avatar-xxl avatar-online"><img src="https://via.placeholder.com/500" class="rounded-circle" alt=""></div>
+                  <div class="avatar avatar-xxl avatar-online"><img src="https://via.placeholder.com/500" class="rounded-circle" alt="" id="field-avatar"></div>
                 </div><!-- col -->
                 <div class="col-sm-8 col-md-7 col-lg-12">
                   <h5 class="mg-b-2 tx-spacing--1"></h5>
-                  <p class="tx-color-03 mg-b-25">@fenchiumao</p>
+                  <p class="tx-color-03 mg-b-25" id="field-username">@fenchiumao</p>
   
-                  <p class="tx-13 tx-color-02 mg-b-25">Redhead, Innovator, Saviour of Mankind, Hopeless Romantic, Attractive 20-something Yogurt Enthusiast...</p>
+                  <p class="tx-13 tx-color-02 mg-b-25" id="field-fullname">Redhead, Innovator, Saviour of Mankind, Hopeless Romantic, Attractive 20-something Yogurt Enthusiast...</p>
                 </div><!-- col -->
-                <div class="col-sm-6 col-md-5 col-lg mg-t-40">
-                  <label class="tx-sans tx-10 tx-semibold tx-uppercase tx-color-01 tx-spacing-1 mg-b-15">Skills</label>
-                  <ul class="list-inline list-inline-skills">
-                    <li class="list-inline-item"><a href="">HTML5</a></li>
-                    <li class="list-inline-item"><a href="">Sass</a></li>
-                    <li class="list-inline-item"><a href="">CSS</a></li>
-                    <li class="list-inline-item"><a href="">jQuery</a></li>
-                    <li class="list-inline-item"><a href="">Node</a></li>
-                    <li class="list-inline-item"><a href="">Git</a></li>
-                    <li class="list-inline-item"><a href="">Front-End Development</a></li>
-                    <li class="list-inline-item"><a href="">Web Design</a></li>
-                  </ul>
-                </div><!-- col -->
+
                 <div class="col-sm-6 col-md-5 col-lg mg-t-40">
                   <label class="tx-sans tx-10 tx-semibold tx-uppercase tx-color-01 tx-spacing-1 mg-b-15">Información de contacto</label>
                   <ul class="list-unstyled profile-info-list">
-                    <li><i data-feather="home"></i> <span class="tx-color-03">Westfield, Oakland, CA</span></li>
-                    <li><i data-feather="smartphone"></i> <a href="">(+51) 994 224 498</a></li>
-                    <li><i data-feather="mail"></i> <a href="">me@fenchiumao.me</a></li>
+                    <li><i data-feather="home"></i> <span class="tx-color-03" id="field-address">Westfield, Oakland, CA</span></li>
+                    <!--<li><i data-feather="smartphone"></i> <a href="" id="field-phone">(+51) 994 224 498</a></li>-->
+                    <li><i data-feather="mail"></i> <a href="" id="field-email">me@fenchiumao.me</a></li>
                   </ul>
                 </div><!-- col -->
               </div><!-- row -->
