--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -193,6 +193,7 @@
                   <p class="tx-color-03 mg-b-25" id="field-username">@fenchiumao</p>
   
                   <p class="tx-13 tx-color-02 mg-b-25" id="field-fullname">Redhead, Innovator, Saviour of Mankind, Hopeless Romantic, Attractive 20-something Yogurt Enthusiast...</p>
+                  <p class="tx-13 tx-color-02 mg-b-25" id="field-description">Redhead, Innovator, Saviour of Mankind, Hopeless Romantic, Attractive 20-something Yogurt Enthusiast...</p>
                 </div><!-- col -->
 
                 <div class="col-sm-6 col-md-5 col-lg mg-t-40">
