agregando mas pages

--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -60,19 +60,21 @@
         </div><!-- navbar-menu-header -->
         <ul class="nav navbar-menu">
           <li class="nav-label pd-l-20 pd-lg-l-25 d-lg-none">Navegador Principal</li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link">Inicio</a>
+          <li class="nav-item ">
+            <a href="page-profile-view.html" class="nav-link">Inicio</a>
           </li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link">Cursos</a>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Cursos</a>
           </li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link">Profesores</a>
+          <li class="nav-item">
+            <a href="app-chat.html" class="nav-link">Chat</a>
           </li>
         </ul>
       </div><!-- navbar-menu-wrapper -->
       <div class="navbar-right">
-        <a href="#" class="btn btn-buy"><i data-feather="shopping-bag"></i> <span>Soporte</span></a>
+          <button id="CerrarSesion" class="btn btn-buy"></i>
+            <span>Cerrar Sesión</span>
+          </button>
       </div><!-- navbar-right -->
     </header><!-- navbar -->
 
@@ -114,7 +116,7 @@
               </div>
               <div class="card-footer bg-transparent pd-y-15 pd-x-20">
                 <nav class="nav nav-with-icon tx-13">
-                  <a href="#" class="nav-link">
+                  <a href="course-page.html" class="nav-link">
                     Mas detalles
                     <i data-feather="chevron-down" class="mg-l-2 mg-r-0 mg-t-2"></i>
                   </a>
