--- a/page-signin.html
+++ b/page-signin.html
@@ -44,37 +44,6 @@
   </head>
   <body>
 
-    <header class="navbar navbar-header navbar-header-fixed">
-      <a href="#" id="mainMenuOpen" class="burger-menu"><i data-feather="menu"></i></a>
-      <div class="navbar-brand">
-        <a href="../../index.html" class="df-logo">
-          <img width="250px" src="../../assets/img/logo_fisi.png" alt="Logo Fisi">
-        </a>
-      </div><!-- navbar-brand -->
-      <div id="navbarMenu" class="navbar-menu-wrapper">
-        <div class="navbar-menu-header">
-          <a href="../../index.html" class="df-logo">
-            <img width="250px" src="../../assets/img/logo_fisi.png" alt="Logo Fisi">
-          </a>
-          <a id="mainMenuClose" href=""><i data-feather="x"></i></a>
-        </div><!-- navbar-menu-header -->
-        <ul class="nav navbar-menu">
-          <li class="nav-label pd-l-20 pd-lg-l-25 d-lg-none">Navegador Principal</li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link">Inicio</a>
-          </li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link">Cursos</a>
-          </li>
-          <li class="nav-item with-sub">
-            <a href="" class="nav-link">Profesores</a>
-          </li>
-        </ul>
-      </div><!-- navbar-menu-wrapper -->
-      <div class="navbar-right">
-        <a href="#" class="btn btn-buy"><i data-feather="shopping-bag"></i> <span>Soporte</span></a>
-      </div><!-- navbar-right -->
-    </header><!-- navbar -->
 
     <div class="content content-fixed content-auth">
         <div class="row">
@@ -123,17 +92,16 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content tx-14">
           <div class="modal-header">
-            <h6 class="modal-title" id="exampleModalLabel6">Modal Title</h6>
+            <h6 class="modal-title" id="exampleModalLabel6">Erro de Validación</h6>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            <p class="mg-b-0">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. T</p>
+            <p class="mg-b-0">Algun de los datos ingresados no es correcto, porfavor coloque datos válidos</p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary tx-13" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary tx-13">Save changes</button>
+            <button type="button" class="btn btn-danger tx-13" data-dismiss="modal">Cerrar</button>
           </div>
         </div>
       </div>
