--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -139,15 +139,12 @@
                     <i data-feather="briefcase" class="tx-white-7 wd-40 ht-40"></i>
                   </div>
                   <div class="media-body pd-t-25 pd-sm-t-0 pd-sm-l-25">
-                    <h5 class="mg-b-5">Nombre del Curso</h5>
-                    <p class="mg-b-3 tx-color-02">Nombres del Profesor</p>
-                    <span class="d-block tx-13 tx-color-03">8vo Ciclo</span>
+                    <h5 class="mg-b-5" id="curso-name">Nombre del Curso</h5>
+                    <p class="mg-b-3 tx-color-02" id="curso-prof">Nombres del Profesor</p>
+                    <!--<span class="d-block tx-13 tx-color-03" id="curso-">8vo Ciclo</span>-->
 
-                    <ul class="pd-l-10 mg-0 mg-t-20 tx-13">
-                      <li>Punto 1.</li>
-                      <li>Punto 2.</li>
-                      <li>Punto 3.</li>
-                      <li>Punto 4.</li>
+                    <ul class="pd-l-10 mg-0 mg-t-20 tx-13" id="curso-weeks">
+
                     </ul>
                   </div>
                 </div><!-- media -->
