--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -66,15 +66,53 @@
           <li class="nav-item">
             <a href="#" class="nav-link">Cursos</a>
           </li>
-          <li class="nav-item">
-            <a href="app-chat.html" class="nav-link">Chat</a>
-          </li>
         </ul>
       </div><!-- navbar-menu-wrapper -->
       <div class="navbar-right">
-          <button id="CerrarSesion" class="btn btn-buy"></i>
-            <span>Cerrar Sesión</span>
-          </button>
+          <div class="navbar-right">
+              <div class="dropdown dropdown-message">
+                <a href="" class="dropdown-link new-indicator" data-toggle="dropdown">
+                  <i data-feather="message-square"></i>
+                  <span>1</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right">
+                  <div class="dropdown-header">Nuevos Mensajes</div>
+                  <a href="" class="dropdown-item">
+                    <div class="media">
+                      <div class="avatar avatar-sm avatar-online"><img src="../https://via.placeholder.com/350" class="rounded-circle" alt=""></div>
+                      <div class="media-body mg-l-15">
+                        <strong>Socrates Itumay</strong>
+                        <p>nam libero tempore cum so...</p>
+                        <span>Mar 15 12:32pm</span>
+                      </div><!-- media-body -->
+                    </div><!-- media -->
+                  </a>
+                  <div class="dropdown-footer"><a href="">Ver todos los mensajes</a></div>
+                </div><!-- dropdown-menu -->
+              </div><!-- dropdown -->
+              <div class="dropdown dropdown-notification">
+                <a href="" class="dropdown-link new-indicator" data-toggle="dropdown">
+                  <i data-feather="bell"></i>
+                  <span>1</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right">
+                  <div class="dropdown-header">Notificaciones</div>
+                  <a href="" class="dropdown-item">
+                    <div class="media">
+                      <div class="avatar avatar-sm avatar-online"><img src="../https://via.placeholder.com/350" class="rounded-circle" alt=""></div>
+                      <div class="media-body mg-l-15">
+                        <p>Congratulate <strong>Socrates Itumay</strong> for work anniversaries</p>
+                        <span>Mar 15 12:32pm</span>
+                      </div><!-- media-body -->
+                    </div><!-- media -->
+                  </a>
+                  <div class="dropdown-footer"><a href="">Ver todas las notificaciones</a></div>
+                </div><!-- dropdown-menu -->
+              </div><!-- dropdown -->
+              <button id="CerrarSesion" class="btn btn-buy"></i>
+                <span>Cerrar Sesión</span>
+              </button>
+          </div><!-- navbar-right -->
       </div><!-- navbar-right -->
     </header><!-- navbar -->
 
@@ -206,7 +244,7 @@
                 </div><!-- col -->
               </div><!-- row -->
   
-            </div><!-- profile-sidebar -->
+          </div><!-- profile-sidebar -->
         </div><!-- media -->
       </div><!-- container -->
     </div><!-- content -->
