--- a/course-page.html
+++ b/course-page.html
@@ -307,9 +307,13 @@
                   <li><i data-feather="mail"></i> <a href="" id="field-email">me@fenchiumao.me</a></li>
                 </ul>
               </div><!-- col -->
+              <div class="col-12">
+                  <div id="datepicker2"></div>
+              </div>
             </div><!-- row -->
 
         </div><!-- profile-sidebar -->
+        
 
         
       </div>
@@ -333,9 +337,11 @@
   <script src="../../lib/jquery/jquery.min.js"></script>
   <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../../lib/feather-icons/feather.min.js"></script>
-  <script src="../../lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+
 
   <script src="../../assets/js/dashforge.js"></script>
+  <script src="../lib/prismjs/prism.js"></script>
+  <script src="../lib/jqueryui/jquery-ui.min.js"></script>
   <script src="../../assets/js/dashforge.filemgr.js"></script>
   <!-- append theme customizer -->
   <script src="../../lib/js-cookie/js.cookie.js"></script>
@@ -344,11 +350,16 @@
   <script src="../../assets/js/course-page.js"></script>
 
   <script>
-    $(function () {
-      'use strict'
+    $(function(){
+        'use strict'
 
-      $('[data-toggle="tooltip"]').tooltip()
-    })
+        $('[data-toggle="tooltip"]').tooltip();
+
+          $('#datepicker2').datepicker({
+              showOtherMonths: true,
+              selectOtherMonths: true
+            });
+      })
   </script>
 </body>
 
