--- a/course-page.html
+++ b/course-page.html
@@ -323,7 +323,7 @@
 
   <footer class="footer">
     <div>
-      <span> Created byGrupo 2 - 2019 &copy;Copyright </span>
+      <span> Creado por Grupo 2 - 2019 &copy;Copyright </span>
     </div>
     <div>
       <nav class="nav">
