--- a/upload-page.html
+++ b/upload-page.html
@@ -32,7 +32,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="../../assets/img/favicon.png">
 
-    <title>DashForge Responsive Bootstrap 4 Dashboard Template</title>
+    <title>Upload Page</title>
 
     <!-- vendor css -->
     <link href="../../lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -132,94 +132,6 @@
                 </div><!-- row -->
           </div><!-- profile-sidebar -->
           <div class="media-body mg-t-40 mg-lg-t-0 pd-lg-x-10">
-            <div class="card mg-b-20 mg-lg-b-25">
-              <div class="card-body pd-25">
-                <div class="media d-block d-sm-flex">
-                  <div class="wd-80 ht-80 bg-ui-04 rounded d-flex align-items-center justify-content-center">
-                    <i data-feather="briefcase" class="tx-white-7 wd-40 ht-40"></i>
-                  </div>
-                  <div class="media-body pd-t-25 pd-sm-t-0 pd-sm-l-25">
-                    <h5 class="mg-b-5">Nombre del Curso</h5>
-                    <p class="mg-b-3 tx-color-02">Nombres del Profesor</p>
-                    <span class="d-block tx-13 tx-color-03">8vo Ciclo</span>
-
-                    <ul class="pd-l-10 mg-0 mg-t-20 tx-13">
-                      <li>Punto 1.</li>
-                      <li>Punto 2.</li>
-                      <li>Punto 3.</li>
-                      <li>Punto 4.</li>
-                    </ul>
-                  </div>
-                </div><!-- media -->
-              </div>
-              <div class="card-footer bg-transparent pd-y-15 pd-x-20">
-                <nav class="nav nav-with-icon tx-13">
-                  <a href="course-page.html" class="nav-link">
-                    Mas detalles
-                    <i data-feather="chevron-down" class="mg-l-2 mg-r-0 mg-t-2"></i>
-                  </a>
-                </nav>
-              </div><!-- card-footer -->
-            </div><!-- card -->
-            <div class="card card-profile-interest">
-              <div class="card-header pd-y-15 pd-x-20 d-flex align-items-center justify-content-between">
-                <h6 class="tx-uppercase tx-semibold mg-b-0">Interests</h6>
-                <nav class="nav nav-with-icon tx-13">
-                  <a href="" class="nav-link">Browse Interests <i data-feather="arrow-right" class="mg-l-5 mg-r-0"></i></a>
-                </nav>
-              </div><!-- card-header -->
-              <div class="card-body pd-25">
-                <div class="row">
-                  <div class="col-sm col-lg-12 col-xl">
-                    <div class="media">
-                      <div class="wd-45 ht-45 bg-gray-900 rounded d-flex align-items-center justify-content-center">
-                        <i data-feather="github" class="tx-white-7 wd-20 ht-20"></i>
-                      </div>
-                      <div class="media-body pd-l-25">
-                        <h6 class="tx-color-01 mg-b-5">Github, Inc.</h6>
-                        <p class="tx-12 mg-b-10">Web-based hosting service for version control using Git... <a href="">Learn more</a></p>
-                        <span class="tx-12 tx-color-03">6,182,220 Followers</span>
-                      </div>
-                    </div><!-- media -->
-
-                    <div class="media">
-                      <div class="wd-45 ht-45 bg-warning rounded d-flex align-items-center justify-content-center">
-                        <i data-feather="truck" class="tx-white-7 wd-20 ht-20"></i>
-                      </div>
-                      <div class="media-body pd-l-25">
-                        <h6 class="tx-color-01 mg-b-5">DHL Express</h6>
-                        <p class="tx-12 mg-b-10">Logistics company providing international courier service... <a href="">Learn more</a></p>
-                        <span class="tx-12 tx-color-03">3,005,192 Followers</span>
-                      </div>
-                    </div><!-- media -->
-                  </div><!-- col -->
-                  <div class="col-sm col-lg-12 col-xl mg-t-25 mg-sm-t-0 mg-lg-t-25 mg-xl-t-0">
-                    <div class="media">
-                      <div class="wd-45 ht-45 bg-primary rounded d-flex align-items-center justify-content-center">
-                        <i data-feather="facebook" class="tx-white-7 wd-20 ht-20"></i>
-                      </div>
-                      <div class="media-body pd-l-25">
-                        <h6 class="tx-color-01 mg-b-5">Facebook, Inc.</h6>
-                        <p class="tx-12 mg-b-10">Online social media and social networking service company... <a href="">Learn more</a></p>
-                        <span class="tx-12 tx-color-03">12,182,220 Followers</span>
-                      </div>
-                    </div><!-- media -->
-
-                    <div class="media">
-                      <div class="wd-45 ht-45 bg-pink rounded d-flex align-items-center justify-content-center">
-                        <i data-feather="instagram" class="tx-white-7 wd-20 ht-20"></i>
-                      </div>
-                      <div class="media-body pd-l-25">
-                        <h6 class="tx-color-01 mg-b-5">Instagram</h6>
-                        <p class="tx-12 mg-b-10">Photo and video-sharing social networking service by Facebook... <a href="">Learn more</a></p>
-                        <span class="tx-12 tx-color-03">3,005,192 Followers</span>
-                      </div>
-                    </div><!-- media -->
-                  </div><!-- col -->
-                </div><!-- row -->
-              </div><!-- card-body -->
-            </div><!-- card -->
-
           </div><!-- media-body -->
           <div class="profile-sidebar pd-lg-r-25">
               <div class="row">
@@ -264,7 +176,6 @@
     <script src="../../lib/jquery/jquery.min.js"></script>
     <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../lib/feather-icons/feather.min.js"></script>
-    <script src="../../lib/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script src="../lib/prismjs/prism.js"></script>
     <script src="../lib/jqueryui/jquery-ui.min.js"></script>
     <script src="../../assets/js/dashforge.js"></script>
