Tu calendario de shit

--- a/page-profile-view.html
+++ b/page-profile-view.html
@@ -125,7 +125,7 @@
                     <div class="d-flex align-items-center justify-content-between mg-b-20">
                       <h6 class="tx-13 tx-uppercase tx-semibold mg-b-0">Calendario</h6>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 np">
                         <div id="datepicker2"></div>
                     </div>
                   </div><!-- col -->
