--- a/upload-page.html
+++ b/upload-page.html
@@ -132,6 +132,16 @@
                 </div><!-- row -->
           </div><!-- profile-sidebar -->
           <div class="media-body mg-t-40 mg-lg-t-0 pd-lg-x-10">
+                <form action="/upload" class="dropzone needsclick dz-clickable" id="demo-upload">
+
+                    <div class="dz-message needsclick">
+                        Arrastre sus files aqui o haga click y seleccione.<br>
+                      <span class="note needsclick">
+                          Recuerde subir sus archivos correctos.
+                      </span>
+                    </div>
+                  
+                  </form>
           </div><!-- media-body -->
           <div class="profile-sidebar pd-lg-r-25">
               <div class="row">
@@ -187,6 +197,8 @@
     <script src="../../assets/js/axios.min.js"></script>
 
     <script src="../../assets/js/profile.js"></script>
+
+    <script src="../../assets/js/dropzone.js"></script>
 
     <script>
       $(function(){
