--- a/upload-file.html
+++ b/upload-file.html
@@ -131,13 +131,13 @@
                   </div><!-- col -->
                 </div><!-- row -->
           </div><!-- profile-sidebar -->
-          <div class="media-body mg-t-40 mg-lg-t-0 pd-lg-x-10">
+          <div class="media-body mg-t-40 mg-lg-t-0 pd-lg-x-10 text-center">
                 <form action="/upload" class="dropzone needsclick dz-clickable" id="demo-upload">
 
                     <div class="dz-message needsclick">
-                        Arrastre sus files aqui o haga click y seleccione.<br>
+                       <h1> Arrastre sus files aqui o haga click y seleccione.</h1><br>
                       <span class="note needsclick">
-                          Recuerde subir sus archivos correctos.
+                          <h3>Recuerde subir sus archivos correctos.</h3>
                       </span>
                     </div>
                   
